--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,28 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 h1 {
   color: purple;
 }
 
-.teamBox {
+.container {
   display: flex;
-  border: 1px solid black;
-  width: 300px;
-  height: 400px;
+  height: fit-content;
 }
 
-.teamBox p img {
+.box {
+  display: flex;
+  flex-direction: column;
   border: 1px solid black;
-  border-radius: 50%;
   width: 200px;
-  height: 200px;
+  margin: 30px;
 }
 
 img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-}
-
-.teamBox h2 {
-  color: red;
-  position: relative;
-  text-align: center;
-  top: 30px;
-}
-
-.teamBox #memberBio {
-  color: purple;
-  position: relative;
-  top: 20px;
-  padding-left: 10px;
 }
